# gemma-sae

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: e4b_it_layer20_batchtopk.yaml  e4b_layer20_batchtopk.yaml  e4b_layer20_batchtopk_dgx_spark.yaml  e4b_layer20_batchtopk_dgx_spark_12x_l064.yaml  e4b_layer20_batchtopk_dgx_spark_8x_l064.yaml
docs/: PUBLICATION_PROTOCOL.md  SAE_RELEASE_CARD_TEMPLATE.md
examples/: science_label_corpus.jsonl
notebooks/: analyze_gemma4_sae.ipynb  hub_prompt_feature_dashboard.ipynb
scripts/: dgx_overnight_width_sweep.sh
src/gemma4_sae/: __init__.py  checkpoint.py  cli.py  collect.py  config.py  data.py  develop.py  devices.py  doctor.py  evaluate.py  explain.py  fidelity.py  gemma.py  label.py  mine.py  provenance.py  release.py  sae.py  storage.py  train.py  verify.py
tests/: test_config.py  test_data.py  test_develop.py  test_devices.py  test_doctor.py  test_explain.py  test_gemma_loading.py  test_label.py  test_mine.py  test_notebooks.py  test_publication_controls.py  test_release.py  test_sae.py  test_storage.py  test_training_integration.py
