[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemma4-sae"
version = "0.1.0"
description = "Reproducible sparse-autoencoder training for Gemma 4 residual-stream activations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.11",
  "datasets>=4.0",
  "huggingface-hub>=1.2",
  "numpy>=2.0",
  "pyyaml>=6.0",
  "torch>=2.7",
  "tqdm>=4.66",
  "transformers>=5.13,<6",
]

[project.optional-dependencies]
quantization = ["bitsandbytes>=0.49"]
dev = [
  "pytest>=8.3",
  "ruff>=0.11",
]

[project.scripts]
gemma4-sae-collect = "gemma4_sae.collect:main"
gemma4-sae-train = "gemma4_sae.train:main"
gemma4-sae-evaluate = "gemma4_sae.evaluate:main"
gemma4-sae-mine = "gemma4_sae.mine:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

