[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemma4-sae"
version = "0.3.0"
description = "Reproducible sparse-autoencoder training for Gemma 4 residual-stream activations"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["gemma-4", "sparse-autoencoder", "interpretability", "batchtopk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "accelerate>=1.11",
  "datasets>=4.0",
  "huggingface-hub>=1.2",
  "numpy>=2.0",
  "pyyaml>=6.0",
  "safetensors>=0.5",
  "torch>=2.7",
  "tqdm>=4.66",
  "transformers>=5.13,<6",
]

[project.urls]
Homepage = "https://github.com/lamm-mit/gemma-sae"
Repository = "https://github.com/lamm-mit/gemma-sae.git"
Issues = "https://github.com/lamm-mit/gemma-sae/issues"

[project.optional-dependencies]
quantization = ["bitsandbytes>=0.49"]
notebook = [
  "jupyterlab>=4.3",
  "matplotlib>=3.9",
  "pandas>=2.2",
  "seaborn>=0.13",
]
dev = [
  "pytest>=8.3",
  "ruff>=0.11",
]

[project.scripts]
gemma4-sae = "gemma4_sae.cli:main"
gemma4-sae-collect = "gemma4_sae.collect:main"
gemma4-sae-doctor = "gemma4_sae.doctor:main"
gemma4-sae-train = "gemma4_sae.train:main"
gemma4-sae-evaluate = "gemma4_sae.evaluate:main"
gemma4-sae-explain = "gemma4_sae.explain:main"
gemma4-sae-fidelity = "gemma4_sae.fidelity:main"
gemma4-sae-mine = "gemma4_sae.mine:main"
gemma4-sae-publish = "gemma4_sae.release:main"
gemma4-sae-verify = "gemma4_sae.verify:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
